@@ -59,7 +59,7 @@ namespace Gendarme.Rules.Performance {
 
 			return (md.Parameters[1].ParameterType.Name == "System.Runtime.Serialization.StreamingContext");
 		}
-
+		
 		// static [void|int] Main ()
 		// static [void|int] Main (string[] args)
 		public bool IsMain (MethodDefinition md)
@@ -106,6 +106,15 @@ namespace Gendarme.Rules.Performance {
 			}
 			return false;
 		}
+		
+		public bool IsGeneratedByCompiler (MethodDefinition method)
+		{
+			foreach (CustomAttribute custom in method.CustomAttributes) {
+				if (custom.Constructor.DeclaringType.FullName == "System.Runtime.CompilerServices.CompilerGeneratedAttribute")
+					return true;
+			}
+			return false;
+		}
 
 		//
 
@@ -122,6 +131,10 @@ namespace Gendarme.Rules.Performance {
 			if (IsMain (method))
 				return runner.RuleSuccess;
 
+			// #4 - rule doesn't apply if the method is generated by
+			// the compiler.
+			if (IsGeneratedByCompiler (method))
+				return runner.RuleSuccess;
 
 			// ok, the rule applies
 
