@@ -1,3 +1,8 @@
+2007-11-29  Nestor Salceda  <nestor.salceda@gmail.com>
+
+	* AvoidUncalledPrivateCodeTest.cs: Added testcase for check compiler
+	generated methods, by example anonymous methods.
+
 2007-11-22  Sebastien Pouliot  <sebastien@ximian.com> 
 
 	* AvoidUncalledPrivateCodeTest.cs: Change behaviour, it's ok to have
